# tax-commander

./: .env.example  .gitignore  CHANGELOG.md  CHEAT_SHEET.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  Receipt_P-001_1.txt  config.yaml  config.yaml.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.jules/: bolt.md
src/tax_commander/: biller.py  calculator.py  dashboard.py  db_manager.py  ingest.py  main.py  printer.py  reporter.py  sample_data.py  schema.sql  self_check.py
tests/: conftest.py  generate_dummy_data.py  simulation_run.sh  test_cli.py
